test/tests/stages/18_structures/invalid_types/initializers/initialize_static_struct_with_zero.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  struct
  identifier(s)
  identifier(x)
  =
  const int(0)
  ;
